# gptpdf

./: .gitignore  LICENSE  README.md  README_CN.md  pyproject.toml
docs/: develop.md
examples/: gptpdf_Quick_Tour.ipynb
examples/attention_is_all_you_need/: output.md
examples/rh/: output.md
gptpdf/: __init__.py  parse.py
test/: .env.example  .evn.example  test.py
test_output/: output.md
